# fitbit2garmin

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
fitbit2garmin/: __init__.py  cli.py  converter.py  exporter.py  gps_fetcher.py  heart_rate_zones.py  models.py  parser.py  utils.py
fitbit2garmin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_converter.py
