[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitbit2garmin"
version = "1.0.0"
description = "Convert Fitbit Google Takeout data to Garmin Connect compatible formats"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gpxpy>=1.5.0",
    "fit-tool>=0.9.0",
    "tcxreader>=0.4.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "click>=8.1.0",
    "python-dateutil>=2.8.0",
    "tqdm>=4.66.0",
    "pydantic>=2.0.0",
]

[project.scripts]
fitbit2garmin = "fitbit2garmin.cli:main"

[project.urls]
Homepage = "https://github.com/user/fitbit2garmin"
Repository = "https://github.com/user/fitbit2garmin"
Issues = "https://github.com/user/fitbit2garmin/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fitbit2garmin*"]
exclude = ["output*", "tests*"]